# nexus-edge-ai-core-next

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
config/: nexus.example.toml  single-camera.toml  single-camera.youtube.toml
config/tiers/: t10.toml  t24.toml  t36.toml  t36s.toml  t64.toml
crates/nexus-bus/: Cargo.toml
crates/nexus-bus/src/: lib.rs
crates/nexus-cloud-client/src/: actor_token.rs  dispatcher.rs  enrollment.rs  lib.rs  response_cache.rs  tunnel.rs
crates/nexus-cloud-client/tests/: dispatch_envelope.rs  response_cache_replay.rs
crates/nexus-cloud-protocol/: Cargo.toml
crates/nexus-cloud-protocol/src/: lib.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: lib.rs
crates/nexus-engine/: Cargo.toml  build.rs
crates/nexus-engine/src/: admin_auth.rs  admin_cloud.rs  admin_runtime.rs  api.rs  audit_retention.rs  auth_bootstrap.rs  cloud_sighting.rs  cloud_tunnel.rs  cold_read_cache.rs  cold_replicator.rs  engine_rpc.rs  fd_limit.rs  gpu.rs  main.rs  npu.rs  oauth_sessions.rs  reconciler.rs  retention.rs  roster.rs  setup.rs  storage_safety.rs  system_metrics.rs
crates/nexus-engine/src/auth/: admin_audit.rs  audit_admin.rs  common_passwords.txt  lockout.rs  mod.rs  passwords.rs  require_role.rs
crates/nexus-engine/src/discovery/: onvif.rs
crates/nexus-inference/: Cargo.toml
crates/nexus-inference/src/: backends.rs  caps.rs  detectors.rs  ensemble.rs  lib.rs  nms.rs  pool.rs  router.rs  yolo_world.rs  yoloe.rs  yoloe_visual.rs
crates/nexus-inference/tests/: visual_prompt_e2e.rs  yolo_world_smoke.rs  yoloe_promptfree_dispatch.rs  yoloe_smoke.rs
crates/nexus-pipeline/: Cargo.toml
crates/nexus-pipeline/src/: cache.rs  entity_sighting.rs  gate.rs  gst_clip_recorder.rs  lib.rs  preroll.rs  preroll_ingester.rs  recorder.rs  skip_policy.rs  source.rs  supervisor.rs  thumbnail.rs
crates/nexus-pipeline/tests/: end_to_end_alert.rs
crates/nexus-probe/: Cargo.toml
crates/nexus-probe/src/: main.rs
crates/nexus-reid/src/: lib.rs  ort_dinov2.rs
crates/nexus-rules/: Cargo.toml
crates/nexus-rules/src/: lib.rs
crates/nexus-rules/tests/: rule_corpus.rs
crates/nexus-sinks/tests/: dispatcher.rs
crates/nexus-storage/: Cargo.toml
crates/nexus-storage-cloud/src/: gdrive.rs  oauth.rs  onedrive.rs
crates/nexus-storage/src/: lan.rs  lib.rs  throttle.rs
crates/nexus-store/: Cargo.toml
crates/nexus-store/migrations/: 0001_initial.sql  0002_motion_clips.sql  0015_motion_clips_priority.sql
crates/nexus-store/src/: cloud.rs  lib.rs  motion.rs  users.rs
crates/nexus-store/tests/: motion_priority.rs  motion_schema.rs  outbox_schema.rs  users_schema.rs  visual_prompts_schema.rs
crates/nexus-telemetry/: Cargo.toml
crates/nexus-telemetry/src/: lib.rs
crates/nexus-tracker/: Cargo.toml
crates/nexus-tracker/src/: annotator.rs  bytetrack.rs  lib.rs  static_object.rs  zone_filter.rs
crates/nexus-types/: Cargo.toml
crates/nexus-types/src/: lib.rs
deploy/: Dockerfile  docker-compose.yml
deploy/systemd/: nexus-engine.service
docs/: DEV_NOTES.md  HARDWARE_TIERS.md  INSTALL.md
models/: models-manifest.json
scripts/: install.sh
scripts/lib/: install-common.sh  release-pubkey.pem
tools/eval-labeler/: README.md  labeler.py
tools/models/: gen_dinov2.py  requirements.txt
tools/youtube-rtsp-bridge/: README.md
tools/youtube-rtsp-bridge/examples/: streams.json
ui/: index.html  package.json  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts
ui/src/: main.ts
ui/src/api/: auth.ts  client.ts  labels.ts  sse.ts  types.ts
ui/src/lib/: auth.ts  canvas.ts  dialog.ts  el.ts  forms.ts  toast.ts
ui/src/pages/: setup.tsx  system.tsx
ui/src/ui/: admin-delivery.ts  admin-users.ts  alert-ticker.ts  audit-history.ts  backends.ts  cameras-discovery.ts  cameras-form.ts  cameras.ts  events.ts  health.ts  login.ts  rules-form.ts  rules.ts  styles.css  viewer.ts
