[package]
name = "nexus-cloud-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Edge-side typed views of the cloud's wire envelope (synced from nexus-cloud-console/proto/v1.json via xtask sync-cloud-protocol). Mirror of the same crate in the cloud-console repo."

[lib]
name = "nexus_cloud_protocol"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
