[package]
name = "nexus-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexus-types = { workspace = true }
nexus-config = { workspace = true }
nexus-store = { workspace = true }
async-trait = { workspace = true }
cel-interpreter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
