[package]
name = "nexus-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
ts = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true, optional = true }
